[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/bodrum-font/Bodrum-JzRm.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/WinScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/SonarPing.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=7]
size = 100
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 65
outline_size = 3
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GameOverScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.00784314, 0.0627451, 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 120.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 100.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "You Win"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 269.0
margin_right = 1024.0
margin_bottom = 330.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]the sub safely made it through the path[/center]"
text = "the sub safely made it through the path"
fit_content_height = true

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -134.0
margin_right = 512.0

[node name="PlayAgain" type="Button" parent="VBoxContainer3"]
margin_right = 1024.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "play again"

[node name="BackToTitle" type="Button" parent="VBoxContainer3"]
margin_top = 69.0
margin_right = 1024.0
margin_bottom = 134.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "back to title"

[node name="SonarPing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.778

[connection signal="pressed" from="VBoxContainer3/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="VBoxContainer3/BackToTitle" to="." method="_on_BackToTitle_pressed"]
